--- a/src/main/resources/templates/vision/ui.html
+++ b/src/main/resources/templates/vision/ui.html
@@ -10,38 +10,42 @@
 
 <div layout:fragment="content">
     <h1>Google Vision API Use</h1>
-    <form class="imageForm" action="/vision/analysis" method="post">
-        <input type="file" accept="image/*" required/>
-        <input type="text" />
+    <form class="imageForm" action="/vision/detectText" method="get">
+        <input type="file" accept="image/*" required name="imageFile"/>
+        <input type="hidden" name="imageBase64"/>
         <button>Submit</button>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
-  function getBase64(file) {
-    return new Promise((resolve, reject) => {
-      const reader = new FileReader();
-      reader.readAsDataURL(file);
-      reader.onload = () => resolve(reader.result);
-      reader.onerror = error => reject(error);
+  async function uploadToServer (file) {
+    const response = await axios({
+      method: 'get',
+      url: '/vision/detectText',
+      data: [file],
+      headers: {
+        'Content-Type': 'multipart/form-data',
+      },
     });
+
+    return response.data
   }
 
   const imageForm = document.querySelector(".imageForm");
-  console.log(imageForm)
   imageForm.addEventListener("submit", (e) => {
     e.preventDefault();
     e.stopPropagation();
 
-    console.log(document.querySelector('input[type="file"]'))
-    let file = document.querySelector('input[type="file"]').files[0];
-    getBase64(file).then(
-        data => {
-          console.log(data);
-          console.log(typeof data);
-          imageForm.querySelector("input[type='text']").value = data;
-        }
-    );
+    let files = imageForm.querySelector('input[name="imageFile"]').files;
+    if (files === null || files.length === 0) {
+      return;
+    }
+    let file = imageForm.querySelector('input[name="imageFile"]').files[0];
+    console.log(file)
+    console.log(files)
+
+    uploadToServer(file)
 
   }, false);
 
