--- a/src/main/resources/templates/school/meal.html
+++ b/src/main/resources/templates/school/meal.html
@@ -5,13 +5,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Board List 게시판 목록</title>
+    <title>학교...</title>
 </head>
 <body>
 <div layout:fragment="content">
 
     <div class="row mt-3" style="margin-bottom: 10px; margin-right: 40vw;">
-        <form action="/board/list" method="get">
+        <form action="/school/meal" method="get">
 
 
 
@@ -21,10 +21,10 @@
     <div class="col">
         <div class="card">
             <div class="card-header">
-                * Board List *
+                * 학교...  *
             </div>
             <div class="card-body" >
-                <h5 class="card-title">게시판 목록</h5>
+                <h5 class="card-title">급식</h5>
                 <table class="table">
                     <thead>
                     <tr>
@@ -91,7 +91,7 @@
         e.preventDefault()
         e.stopPropagation()
 
-        self.location ='/board/list'
+        self.location ='/school/meal'
 
     },false)
 
